--- a/app/build.gradle
+++ b/app/build.gradle
@@ -43,6 +43,10 @@ dependencies {
     implementation 'com.android.support:appcompat-v7:25.4.0'
     implementation 'com.android.support:design:25.4.0'
     implementation 'com.android.support:cardview-v7:25.4.0'
+    implementation "com.android.support:preference-v7:25.4.0"
+    implementation "com.android.support:preference-v14:25.4.0"
+
+    implementation "de.hdodenhof:circleimageview:2.2.0"
     implementation 'com.github.bumptech.glide:glide:4.3.1'
     annotationProcessor 'com.github.bumptech.glide:compiler:4.3.1'
     implementation 'com.github.LuckSiege.PictureSelector:picture_library:v2.1.7'
