#增加主题色

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -47,7 +47,10 @@
 
         <activity
             android:name=".ui.activity.SettingsActivity"
-            android:screenOrientation="portrait"/>
+            android:screenOrientation="portrait" />
+        <activity
+            android:name=".ui.activity.ThemeListActivity"
+            android:screenOrientation="portrait" />
 
     </application>
 
