--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -37,6 +37,9 @@
         <activity
             android:name=".ui.activity.ThreeProverbListActivity"
             android:screenOrientation="portrait" />
+        <activity
+            android:name=".ui.activity.TellTheSecretActivity"
+            android:screenOrientation="portrait" />
 
     </application>
 
