#告诉你个秘密 选择图片界面实现，公共layout抽取，代码逻辑优化

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -40,6 +40,9 @@
         <activity
             android:name=".ui.activity.TellTheSecretActivity"
             android:screenOrientation="portrait" />
+        <activity
+            android:name=".ui.activity.SecretListActivity"
+            android:screenOrientation="portrait" />
 
     </application>
 
