--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -43,7 +43,9 @@
         <activity
             android:name=".ui.activity.SecretListActivity"
             android:screenOrientation="portrait" />
-
+        <activity
+            android:name=".ui.activity.SecretEditActivity"
+            android:screenOrientation="portrait" />
     </application>
 
 </manifest>
