--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -46,6 +46,9 @@
         <activity
             android:name=".ui.activity.SecretEditActivity"
             android:screenOrientation="portrait" />
+        <activity
+            android:name=".ui.activity.ShowSecretActivity"
+            android:screenOrientation="portrait" />
     </application>
 
 </manifest>
