--- a/app/build.gradle
+++ b/app/build.gradle
@@ -1,17 +1,22 @@
 apply plugin: 'com.android.application'
 
 android {
-    compileSdkVersion 25
+    compileSdkVersion 27
     defaultConfig {
         applicationId "com.android.emoticoncreater"
         minSdkVersion 21
-        targetSdkVersion 25
-        versionCode 3
-        versionName "1.2"
+        targetSdkVersion 27
+        versionCode 4
+        versionName "1.3"
     }
     buildTypes {
-        release {
+        debug {
             minifyEnabled false
+        }
+        release {
+            minifyEnabled true//启动代码混淆
+            zipAlignEnabled true//Zipalign优化
+            shrinkResources true// 移除无用的resource文件
             proguardFiles getDefaultProguardFile('proguard-android.txt'), 'proguard-rules.pro'
         }
     }
@@ -39,13 +44,13 @@ android {
 
 dependencies {
     implementation fileTree(include: ['*.jar'], dir: 'libs')
-    implementation 'com.android.support:support-v4:25.4.0'
-    implementation 'com.android.support:appcompat-v7:25.4.0'
-    implementation 'com.android.support:design:25.4.0'
-    implementation 'com.android.support:cardview-v7:25.4.0'
-    implementation 'com.github.bumptech.glide:glide:4.3.1'
-    annotationProcessor 'com.github.bumptech.glide:compiler:4.3.1'
-    implementation 'com.github.LuckSiege.PictureSelector:picture_library:v2.1.7'
+    implementation 'com.android.support:support-v4:27.0.2'
+    implementation 'com.android.support:appcompat-v7:27.0.2'
+    implementation 'com.android.support:design:27.0.2'
+    implementation 'com.android.support:cardview-v7:27.0.2'
+    implementation 'com.github.bumptech.glide:glide:4.5.0'
+    annotationProcessor 'com.github.bumptech.glide:compiler:4.5.0'
+    implementation 'com.github.LuckSiege.PictureSelector:picture_library:v2.1.9'
     implementation files('libs/lite-orm-1.9.2.jar')
     implementation 'com.tencent.bugly:crashreport:2.6.6'
     debugImplementation 'com.squareup.leakcanary:leakcanary-android:1.5.4'
