--- a/app/build.gradle
+++ b/app/build.gradle
@@ -1,7 +1,7 @@
 apply plugin: 'com.android.application'
 
 android {
-    compileSdkVersion 25
+    compileSdkVersion 27
     defaultConfig {
         applicationId "com.android.emoticoncreater"
         minSdkVersion 21
@@ -44,17 +44,12 @@ android {
 
 dependencies {
     implementation fileTree(include: ['*.jar'], dir: 'libs')
-    implementation 'com.android.support:support-v4:25.4.0'
-    implementation 'com.android.support:appcompat-v7:25.4.0'
-    implementation 'com.android.support:design:25.4.0'
-    implementation 'com.android.support:cardview-v7:25.4.0'
+    implementation 'com.android.support:support-v4:27.1.1'
+    implementation 'com.android.support:appcompat-v7:27.1.1'
+    implementation 'com.android.support:design:27.1.1'
+    implementation 'com.android.support:cardview-v7:27.1.1'
     implementation files('libs/lite-orm-1.9.2.jar')
     implementation 'com.tencent.bugly:crashreport:2.6.6'
-
-    implementation('com.github.bumptech.glide:glide:4.6.1', {
-        exclude group: 'com.android.support'
-    })
-    annotationProcessor('com.github.bumptech.glide:compiler:4.6.1', {
-        exclude group: 'com.android.support'
-    })
+    implementation 'com.github.bumptech.glide:glide:4.7.1'
+    annotationProcessor 'com.github.bumptech.glide:compiler:4.7.1'
 }
