--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -2,6 +2,8 @@
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
     package="com.android.emoticoncreater">
 
+    <uses-permission android:name="android.permission.INTERNET" />
+
     <uses-permission android:name="android.permission.READ_EXTERNAL_STORAGE" />
     <uses-permission android:name="android.permission.WRITE_EXTERNAL_STORAGE" />
 
@@ -54,6 +56,12 @@
             android:screenOrientation="portrait" />
         <activity
             android:name=".ui.activity.OneEmoticonEditActivity"
+            android:screenOrientation="portrait" />
+        <activity
+            android:name=".ui.activity.GifThemeListActivity"
+            android:screenOrientation="portrait" />
+        <activity
+            android:name=".ui.activity.GifEditActivity"
             android:screenOrientation="portrait" />
     </application>
 
