--- a/app/build.gradle
+++ b/app/build.gradle
@@ -6,8 +6,8 @@ android {
         applicationId "com.android.emoticoncreater"
         minSdkVersion 21
         targetSdkVersion 25
-        versionCode 180609
-        versionName "1.5 beta1"
+        versionCode 180611
+        versionName "1.5"
     }
     buildTypes {
         debug {
@@ -49,7 +49,7 @@ dependencies {
     implementation 'com.android.support:design:27.1.1'
     implementation 'com.android.support:cardview-v7:27.1.1'
     implementation 'pl.droidsonroids.gif:android-gif-drawable:1.2.12'
-    implementation 'com.alibaba:fastjson:1.2.47'
+    implementation 'com.alibaba:fastjson:1.1.68.android'
     implementation files('libs/lite-orm-1.9.2.jar')
     implementation 'com.tencent.bugly:crashreport:2.6.6'
     implementation 'com.github.bumptech.glide:glide:4.7.1'
